--- a/src/web/app/pom.xml
+++ b/src/web/app/pom.xml
@@ -235,6 +235,11 @@
   </dependencies>
   <build>
     <plugins>
+	<plugin>
+        	<groupId>com.heroku.sdk</groupId>
+        	<artifactId>heroku-maven-plugin</artifactId>
+        	<version>3.0.3</version>
+	 </plugin>
       <!-- Builds a valid data directory into the web app -->
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
